--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,9 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+$white: #ffffff;
+$black: #000000;
+$primary1: #00c6a9;
+$primary2: #252525;
+$textCol: #999;
