--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -11,6 +11,8 @@ $light-gray: #F4F4F4;
 
 $white: #ffffff;
 $black: #000000;
+$doctor: #2a7fba;
 $primary1: #00c6a9;
 $primary2: #252525;
-$textCol: #999;
+$patient: #b00636;
+$textCol: #49535a;
