--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -26,8 +26,8 @@
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= button_to omniauth_authorize_path(resource_name, provider), data: { turbo: false }, class: "btn border" do %>
-      <span style="color: rgb(200,0,15)" ><span class="fa fa-google"></span> Se connecter avec Google</span>
+    <%= button_to  omniauth_authorize_path(resource_name, provider), data: { turbo: false },class: "btn border" do%>
+      <span style="color: rgb(200,0,15)"><i class="fa fa-google"></i> Sign in with Google</span>
     <% end %><br />
   <% end %>
 <% end %>
