--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -86,7 +86,7 @@
               </h5>
               <div class="post_box">
                 <div class="img-box">
-                  <img src="images/post1.jpg" alt="">
+                  <img src="" alt="">
                 </div>
                 <p>
                   Normal
@@ -95,7 +95,7 @@
               </div>
               <div class="post_box">
                 <div class="img-box">
-                  <img src="images/post2.jpg" alt="">
+                  <img src="" alt="">
                 </div>
                 <p>
                   Normal
@@ -111,7 +111,7 @@
               </h5>
               <div class="post_box">
                 <div class="img-box">
-                  <img src="images/post3.jpg" alt="">
+                  <img src="" alt="">
                 </div>
                 <p>
                   Normal
@@ -120,7 +120,7 @@
               </div>
               <div class="post_box">
                 <div class="img-box">
-                  <img src="images/post4.png" alt="">
+                  <img src="" alt="">
                 </div>
                 <p>
                   Normal
