--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,8 +9,8 @@
           <%= f.error_notification %>
 
           <div class="field">
-            <%= f.label :profile, 'Client' %>
-            <%= f.radio_button :profile, 'Client' %>
+            <%= f.label :profile, 'Patient' %>
+            <%= f.radio_button :profile, 'Patient' %>
             <%= f.label :profile, 'Doctor' %>
             <%= f.radio_button :profile, 'Doctor'%>
           </div>
